--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
   "dependencies": {
     "@babel/polyfill": "^7.6.0",
     "axios": "^0.19.0",
+    "jest": "^23.2.0",
     "normalize.css": "^8.0.1",
     "promptly": "^3.0.3",
     "pug": "^2.0.3",
@@ -64,6 +65,7 @@
     "vue-awesome-swiper": "^3.1.3",
     "vue-flickity": "^1.2.1",
     "vue-router": "^3.1.3",
-    "vuex": "^3.1.1"
+    "vuex": "^3.1.1",
+    "webdriverio": "^4.13.1"
   }
 }
